# etelemetry-client

./: .gitattributes  .gitignore  .travis.yml  MANIFEST.in  README.md  codecov.yml  setup.cfg  setup.py
.github/workflows/: pythonpackage.yml  pythonpublish.yml
docs/: design-update.md
etelemetry/: __init__.py  _version.py  client.py
etelemetry.egg-info/: PKG-INFO  SOURCES.txt
etelemetry/config/: __init__.py
etelemetry/tests/: test_client.py  test_config.py
