[metadata]
url = https://github.com/mgxd/etelemetry-client
author = Senseable Intelligence Group
maintainer = Mathias Goncalves
maintainer_email = mathiasg@mit.edu
description = Etelemetry python client API
license = Apache License, 2.0
provides =
    etelemetry
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
python_requires = >= 3.5
install_requires =
    requests
    ci-info
test_requires =
    pytest >= 4.4.0
    pytest-cov
    codecov
packages = find:
include_package_data = True

[options.extras_require]
test =
    pytest
    pytest-cov
    codecov
tests =
    %(test)s
all =
    %(test)s

[versioneer]
VCS = git
style = pep440
versionfile_source = etelemetry/_version.py
versionfile_build = etelemetry/_version.py
tag_prefix =
parentdir_prefix =
